--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,3 +17,14 @@
 .carosel {
     scroll-snap-align: center;
 }
+.drawer {
+    width: 0px;
+    min-width: 0px;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+}
+
+.drawer.active {
+    width: 300px;
+    min-width: 300px;
+}
